# TractorBot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.config.json  main.py  pyproject.toml  requirements.txt
bot/: example.config.json  main.py
bot/cogs/: autoroles.py  fun.py  help.py  jiuda.py  tag.py
bot/cogs/admin/: jiuda.py
bot/cogs/cmds/: help.py  mod.py  tag.py  util.py
bot/cogs/core/: automod.py  autoroles.py  errors.py  events.py
bot/cogs/mod/: ban_link.py  ban_word.py
bot/cogs/owner/: load.py  misc.py  sync.py
bot/cogs/util/: info.py  misc.py
bot/data/: data.json  schema.sql
bot/utils/: db_manager.py  pagination.py
cogs/cmds/: owner.py
cogs/commands/: fun.py  help.py  mod.py  owner.py  tag.py  util.py
cogs/core/: automod.py  autoroles.py  errors.py  events.py
data/: banned_links.json  banned_words.json  data.json  tags.json
database/: schema.sql
exceptions/: __init__.py
helpers/: checks.py  db_manager.py
scripts/: __init__.py
