[tool.poetry]
name = "tractorbot"
version = "0.2.0"
description = ""
authors = ["iMaxii <maxiintentaprogramar@gmail.com>"]
license = "MIT"
packages = [
    { include = "bot" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
reactionmenu = "^3.1.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.scripts]
format = "scripts:format"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
